# sample_tdd_python

./: .flake8  .gitignore  README.rst  pyproject.toml
sample_tdd/: __init__.py  hello_world.py  xunit.py
sample_tdd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: activate.sh  format.sh  inspect_code.sh  install.sh  test.sh
tests/: test_hello_world.py  test_sample_tdd.py
