[tool.poetry]
name = "sample_tdd"
version = "0.1.0"
description = ""
authors = ["Satoshi Yamagami <s.yamagami.666@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nose = "^1.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
