[tool.poetry]
name = "sample_tdd"
version = "0.1.0"
description = ""
authors = ["Satoshi Yamagami <s.yamagami.666@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-html = "^2.0.1"
sphinx = "^2.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
