[tool.poetry]
name = "sample_tdd"
version = "0.1.0"
description = ""
authors = ["Satoshi Yamagami <s.yamagami.666@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-html = "^2.0.1"
sphinx = "^2.4.3"
hacking = "^2.0.0"
flake8-import-order = "^0.18.1"
autopep8 = "^1.5"
flake8-docstrings = "^1.5.0"
coverage = {extras = ["toml"], version = "^5.0.3"}
black = "^19.10b0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage]
    [tool.coverage.run]
    branch = true

    [tool.coverage.report]
    exclude_lines = ["pragma: no cover","if __name__ == .__main__.:"]

    [tool.coverage.html]
    directory = "reports/test/coverage"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | reports
  | dist
)/
'''

